--- a/bigbluebutton-client/locale/pt_BR/bbbResources.properties
+++ b/bigbluebutton-client/locale/pt_BR/bbbResources.properties
@@ -2,7 +2,7 @@ bbb.mainshell.locale.version = 0.9.0
 bbb.mainshell.statusProgress.connecting = Conectando ao servidor
 bbb.mainshell.statusProgress.loading = Carregando {0} módulos
 bbb.mainshell.statusProgress.cannotConnectServer = Desculpe, não foi possível conectar ao servidor.
-bbb.mainshell.copyrightLabel2 = (c) 2015 BigBlueButton Inc. [build {0}] - Para mais informações, acesse <a href\='http\://www.bigbluebutton.org/' target\='_blank'><u>http\://www.bigbluebutton.org</u></a>
+bbb.mainshell.copyrightLabel2 = Para mais informações, acesse <a href='event:http://conferenciacorp.com.br/webconferencia.htm' target='_blank'><u>http://www.conferenciacorp.com.br</u></a>
 bbb.mainshell.logBtn.toolTip = Abrir janela de log
 bbb.mainshell.meetingNotFound = Sala não encontrada
 bbb.mainshell.invalidAuthToken = Token de autenticação inválido
@@ -256,7 +256,7 @@ bbb.video.publish.hint.waitingApproval = Aguardando permissão
 bbb.video.publish.hint.videoPreview = Preview do vídeo
 bbb.video.publish.hint.openingCamera = Abrindo câmera...
 bbb.video.publish.hint.cameraDenied = Acesso à câmera negado
-bbb.video.publish.hint.cameraIsBeingUsed = Sua câmera está sendo usada por outro aplicativo
+bbb.video.publish.hint.cameraIsBeingUsed = Sua câmera não pôde ser aberta - ela pode estar sendo usada por outro aplicativo
 bbb.video.publish.hint.publishing = Transmitindo vídeo...
 bbb.video.publish.closeBtn.accessName = Fechar caixa de diálogo de configuração da webcam
 bbb.video.publish.closeBtn.label = Cancelar
